--- a/Views/ExpiredProductPageView.axaml
+++ b/Views/ExpiredProductPageView.axaml
@@ -88,7 +88,7 @@
             Margin="5,0,0,0"
             HorizontalAlignment="Right"
             Background="#1a1a1a"
-            Command="{Binding RemoveItemCommand}"
+            Command="{Binding RemoveProductCommand}"
             Foreground="White"
             ToolTip.Tip="Deletar">
             <PathIcon Data="{StaticResource trahscan_regular}" Foreground="White" />
